# news-refine

./: .dockerignore  .env.example  .env.prod  .gitignore  .markdownlint.json  Dockerfile  README.md  docker-compose.yaml  fly.toml  main.py  pyproject.toml
.github/workflows/: ci-deploy.yml
app/: config.py  db.py  models.py
app/auth/: __init__.py  auth.py  github.py  jwt.py  swagger_auth.py
app/core/: context.py  rbac.py
app/dao/: __init__.py  dto.py  news_event_dao.py  news_info_dao.py  news_item_dao.py  news_keywords_dao.py  stats_dao.py
app/middleware/: __init__.py  jwt_middleware.py
app/routers/: __init__.py  analysis.py  news.py  search.py  stats.py
app/services/: __init__.py  analysis_service.py  extract_news_service.py
app/utils/: __init__.py  util.py
postgres/init/: 00000000000001_init_schema.sql  00000000000002_init_data.sql  0003_add_fetch_all_news_scheduled_task.sql  20250903052258_creat_new_user_table.sql  20250920170017_add_video_info_table.sql  20250928052312_scheduled_tasks_table.sql  20250928055912_add_create_at_update_at_for_ani_info.sql  20250928061922_add_update_at_trigger_bulk.sql  20250928085242_add_unique_for_scheduled_tasks.sql  20250929110000_delete_unused_table.sql  20251001111929_add_user_setting.sql  20251029143758_add_news_info_table.sql  20251118104812_init_scheduled_tasks_data.sql  20251119171652_alter_scheduled_tasks_params_to_jsonb.sql  20251124141442_add_field_in_table_news_info.sql  20251124154200_update_constraint_in_table_news_info.sql  20251203085348_add_health_check_task.sql  20251204075659_alter_news_info_add_field_extracted_extracted_at_error.sql  20251204075839_add_news_item_table_and_news_keywords.sql  20251205195253_alter_news_item_published_at_to_timestamp.sql  20251206085849_add_extract_transform_news_info_to_item_task.sql  20251206143835_alter_news_item_add_extracted_and_extracted_at_field.sql  20251207115422_update_news_keywords.sql  20251207150309_add_extract_keywords_task_config_data.sql  20251212030017_update_news_items_table_and_news_keywords_table.sql  20251213062602_update_scheduled_tasks_config.sql  20251214123254_add_news_event_table.sql  20251214124744_add_news_event_item_table.sql  20251214125637_add_update_updated_at_trigger.sql  20251215064531_alter_news_event_add_parent_event_id.sql  20251215074833_add_news_event_pipeline_run_table.sql  20251215115804_add_news_event_extract_merge_event_jobs_config.sql  20260106073226_alter_user_info.sql  20260106073811_rbac_saas_table.sql  20260106082843_init_user_info_and_rbac_data.sql  20260108073108_alter_user_info_add_token_version_and_so_on.sql  20260108114627_rebuild_table_refresh_tokens.sql  20260108160557_rebuild_refresh_tokens_table.sql
tests/: conftest.py
tests/unit/dao/: test_news_event_dao.py  test_news_info_dao.py  test_news_item_dao.py  test_stats_dao.py
tests/unit/routers/: test_news.py  test_search.py  test_stats.py
tests/unit/services/: test_analysis_service.py  test_extract_news_service.py
