[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-refine"
version = "0.1.3"
description = "News TimeStream Platform 分析层服务"
authors = [{ name = "likanug", email = "likanug.g@qq.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.13.2",
    "uvicorn>=0.44.0",
    "wordcloud>=1.9.4",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.49",
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "pydantic_settings>=2.12.0",
    "asyncpg>=0.31.0",
    "wordfreq-cn>=0.2.1",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["static"]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-mock>=3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["wordfreq_cn"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]